--- a/mylib.bib
+++ b/mylib.bib
@@ -246,6 +246,19 @@ isbn = {},
   note = {Accessed: 2017-12-06},
 }
 
+@misc{faster_rcnn_git,
+	title = {Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
+	howpublished = {\url{https://github.com/ShaoqingRen/faster_rcnn}},
+	note = {Accessed: 2017-12-15},
+}
+
+@article{ren15fasterrcnn,
+	Author = {Shaoqing Ren, Kaiming He, Ross Girshick, Jian Sun},
+	Title = {{Faster R-CNN}: Towards Real-Time Object Detection with Region Proposal Networks},
+	Journal = {arXiv preprint arXiv:1506.01497},
+	Year = {2015}
+}
+
 @misc{rosbag,
 	title = {rosbag - ROS Wiki},
 	howpublished = {\url{http://wiki.ros.org/rosbag}},
@@ -295,6 +308,16 @@ pages = {1097--1105},
 year = {2012},
 publisher = {Curran Associates, Inc.},
 url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+}
+
+@book{machine_learning,
+	title =     {Pattern Recognition and Machine Learning},
+	author =    {Christopher M. Bishop},
+	publisher = {Springer},
+	year =      {2006},
+	series =    {Information science and statistics},
+	edition =   {1st ed. 2006. Corr. 2nd printing},
+	volume =    {},
 }
 
 @Inbook{Zeiler2014,
